--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,12 +1,3 @@
-.label{
-    display: inline-block;
-    font-weight: 400;
-    line-height: 1.5;
-    color: #fff;
-    background-color: #6c757d;
-    border-color: #6c757d;
-    text-align: center;
-    padding: .375rem .75rem;
-    font-size: 1rem;
-    border-radius: .25rem;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
